--- a/main/res/xml/preferences_services_gcvote_com.xml
+++ b/main/res/xml/preferences_services_gcvote_com.xml
@@ -5,24 +5,32 @@
     android:key="@string/preference_screen_gcvote"
     android:title="@string/init_gcvote" >
 
-    <PreferenceCategory android:title="@string/settings_settings" >
+    <PreferenceCategory
+        android:title="@string/settings_settings"
+        app:iconSpaceReserved="false" >
         <CheckBoxPreference
             android:defaultValue="true"
             android:key="@string/pref_ratingwanted"
             android:summary="@string/init_summary_ratingwanted"
-            android:title="@string/init_ratingwanted" />
+            android:title="@string/init_ratingwanted"
+            app:iconSpaceReserved="false" />
         <Preference
             android:dependency="@string/pref_ratingwanted"
-            app:summary="@string/init_gcvote_password_description" />
+            app:summary="@string/init_gcvote_password_description"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.CredentialsPreference
             android:dependency="@string/pref_ratingwanted"
             android:summary="@string/auth_unconnected"
-            android:key="@string/pref_fakekey_gcvote_authorization" />
+            android:key="@string/pref_fakekey_gcvote_authorization"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information" >
+    <PreferenceCategory
+        android:title="@string/settings_information"
+        app:iconSpaceReserved="false" >
         <Preference
             android:key="@string/pref_fakekey_gcvote_website"
-            android:title="@string/settings_open_website" />
+            android:title="@string/settings_open_website"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
