--- a/main/res/xml/preferences_services_geocaching_com.xml
+++ b/main/res/xml/preferences_services_geocaching_com.xml
@@ -4,7 +4,9 @@
     android:key="@string/preference_screen_gc"
     android:title="@string/settings_title_gc">
 
-    <PreferenceCategory android:title="@string/settings_settings">
+    <PreferenceCategory
+        android:title="@string/settings_settings"
+        app:iconSpaceReserved="false">
         <cgeo.geocaching.settings.CheckBoxWithPopupPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorGCActive"
@@ -12,41 +14,51 @@
             app:text="@string/settings_gc_legal_note"
             app:popupTitle="@string/settings_title_gc"
             app:url="@string/settings_gc_legal_note_url"
-            app:urlButton="@string/settings_goto_url_button" />
+            app:urlButton="@string/settings_goto_url_button"
+            app:iconSpaceReserved="false" />
         <Preference
             android:dependency="@string/pref_connectorGCActive"
-            app:summary="@string/settings_gc_description" />
+            app:summary="@string/settings_gc_description"
+            app:iconSpaceReserved="false" />
 
         <cgeo.geocaching.settings.CredentialsPreference
             android:dependency="@string/pref_connectorGCActive"
             android:key="@string/pref_fakekey_gc_authorization"
-            app:summary="@string/auth_unconnected" />
+            app:summary="@string/auth_unconnected"
+            app:iconSpaceReserved="false" />
 
         <PreferenceScreen
             android:dependency="@string/pref_connectorGCActive"
             android:key="@string/preference_screen_basicmembers"
-            android:title="@string/settings_title_basicmembers">
+            android:title="@string/settings_title_basicmembers"
+            app:iconSpaceReserved="false">
             <CheckBoxPreference
                 android:defaultValue="true"
                 android:key="@string/pref_loaddirectionimg"
                 android:summary="@string/init_summary_loaddirectionimg"
-                android:title="@string/init_loaddirectionimg" />
+                android:title="@string/init_loaddirectionimg"
+                app:iconSpaceReserved="false" />
         </PreferenceScreen>
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information">
+    <PreferenceCategory
+        android:title="@string/settings_information"
+        app:iconSpaceReserved="false">
         <Preference
             android:key="@string/pref_gc_fb_login_hint"
             android:icon="?attr/settings_info_icon"
             android:text="@string/settings_info_facebook_login"
             android:title="@string/settings_info_facebook_login_title"
             app:url="@string/settings_facebook_login_url"
-            app:urlButton="@string/settings_goto_url_button" />
+            app:urlButton="@string/settings_goto_url_button"
+            app:iconSpaceReserved="false" />
         <Preference
             android:key="@string/pref_fakekey_gc_website"
-            android:title="@string/settings_open_website" />
+            android:title="@string/settings_open_website"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.CapabilitiesPreference
             android:title="@string/settings_features"
-            app:connector="GC" />
+            app:connector="GC"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
