--- a/main/res/xml/preferences_services_opencache_uk.xml
+++ b/main/res/xml/preferences_services_opencache_uk.xml
@@ -5,26 +5,35 @@
     android:key="@string/preference_screen_ocuk"
     android:title="@string/init_oc_uk" >
 
-    <PreferenceCategory android:title="@string/settings_settings" >
+    <PreferenceCategory
+        android:title="@string/settings_settings"
+        app:iconSpaceReserved="false" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCUKActive"
             android:summary="@string/init_summary_oc_uk"
-            android:title="@string/settings_service_activate" />
+            android:title="@string/settings_service_activate"
+            app:iconSpaceReserved="false" />
         <Preference
             android:dependency="@string/pref_connectorOCUKActive"
-            app:summary="@string/init_oc_uk_description" />
+            app:summary="@string/init_oc_uk_description"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCUKActive"
-            android:key="@string/pref_fakekey_ocuk_authorization" />
+            android:key="@string/pref_fakekey_ocuk_authorization"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information" >
+    <PreferenceCategory
+        android:title="@string/settings_information"
+        app:iconSpaceReserved="false" >
         <Preference
             android:key="@string/pref_fakekey_ocuk_website"
-            android:title="@string/settings_open_website" />
+            android:title="@string/settings_open_website"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.CapabilitiesPreference
             android:title="@string/settings_features"
-            app:connector="OK" />
+            app:connector="OK"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
