--- a/main/res/xml/preferences_services_opencaching_de.xml
+++ b/main/res/xml/preferences_services_opencaching_de.xml
@@ -4,26 +4,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:key="@string/preference_screen_ocde"
     android:title="@string/init_oc" >
-    <PreferenceCategory android:title="@string/settings_settings" >
+    <PreferenceCategory
+        android:title="@string/settings_settings"
+        app:iconSpaceReserved="false" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCActive"
             app:summary="@string/init_summary_oc_de"
-            android:title="@string/settings_service_activate" />
+            android:title="@string/settings_service_activate"
+            app:iconSpaceReserved="false" />
         <Preference
             android:dependency="@string/pref_connectorOCActive"
-            app:summary="@string/init_oc_de_description" />
+            app:summary="@string/init_oc_de_description"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCActive"
-            android:key="@string/pref_fakekey_ocde_authorization" />
+            android:key="@string/pref_fakekey_ocde_authorization"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information" >
+    <PreferenceCategory
+        android:title="@string/settings_information"
+        app:iconSpaceReserved="false" >
         <Preference
             android:key="@string/pref_fakekey_ocde_website"
-            android:title="@string/settings_open_website" />
+            android:title="@string/settings_open_website"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.CapabilitiesPreference
             android:title="@string/settings_features"
-            app:connector="OC" />
+            app:connector="OC"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
