--- a/main/res/xml/preferences_services_opencaching_us.xml
+++ b/main/res/xml/preferences_services_opencaching_us.xml
@@ -5,26 +5,35 @@
     android:key="@string/preference_screen_ocus"
     android:title="@string/init_oc_us" >
 
-    <PreferenceCategory android:title="@string/settings_settings" >
+    <PreferenceCategory
+        android:title="@string/settings_settings"
+        app:iconSpaceReserved="false" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_connectorOCUSActive"
             android:summary="@string/init_summary_oc_us"
-            android:title="@string/settings_service_activate" />
+            android:title="@string/settings_service_activate"
+            app:iconSpaceReserved="false" />
         <Preference
             android:dependency="@string/pref_connectorOCUSActive"
-            app:summary="@string/init_oc_us_description" />
+            app:summary="@string/init_oc_us_description"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.OAuthPreference
             android:dependency="@string/pref_connectorOCUSActive"
-            android:key="@string/pref_fakekey_ocus_authorization" />
+            android:key="@string/pref_fakekey_ocus_authorization"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_information" >
+    <PreferenceCategory
+        android:title="@string/settings_information"
+        app:iconSpaceReserved="false" >
         <Preference
             android:key="@string/pref_fakekey_ocus_website"
-            android:title="@string/settings_open_website" />
+            android:title="@string/settings_open_website"
+            app:iconSpaceReserved="false" />
         <cgeo.geocaching.settings.CapabilitiesPreference
             android:title="@string/settings_features"
-            app:connector="OU" />
+            app:connector="OU"
+            app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
