make preference buttons look like buttons again

--- a/main/res/layout/preference_button.xml
+++ b/main/res/layout/preference_button.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:descendantFocusability="blocksDescendants">
-    <TextView android:id="@android:id/title"
+    <com.google.android.material.button.MaterialButton
+        android:id="@android:id/title"
         style="@style/button_full"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
