--- a/main/res/drawable/white_bcg.xml
+++ b/main/res/drawable/white_bcg.xml
@@ -5,7 +5,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/osm_zoomcontrolbackground" />
-            <corners android:radius="2dp" />/>
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </ripple>
