--- a/main/res/layout/cachelist_attributeoverview.xml
+++ b/main/res/layout/cachelist_attributeoverview.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp">
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="6dp">
 
-    <ImageView
-        android:id="@+id/attribute_icon"
-        android:layout_width="32dip"
-        android:scaleType="centerInside"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:paddingRight="3dp" />
-    <TextView
-        android:id="@+id/attribute_counter"
-        android:layout_width="60sp"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:gravity="center_vertical|right"
-        android:layout_gravity="center_vertical"
-        android:textSize="@dimen/textSize_listsPrimary"
-        android:paddingRight="12dp" />
-    <TextView
-        android:id="@+id/attribute_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="top|left"
-        android:layout_gravity="center_vertical"
-        android:textSize="@dimen/textSize_listsPrimary" />
+        <cgeo.geocaching.ui.WrappingGridView
+            android:id="@+id/attributes_grid"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:columnWidth="32dip"
+            android:horizontalSpacing="2dip"
+            android:numColumns="auto_fit"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:scrollbars="none"
+            android:stretchMode="none"
+            android:verticalSpacing="2dip" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/attributes_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:linksClickable="true"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:textIsSelectable="false"
+            android:textSize="@dimen/textSize_detailsSecondary"
+            android:textColor="@color/colorText"
+            android:visibility="visible"/>
+    </LinearLayout>
+</ScrollView>
